# TurboTransformers

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Dockerfile.dev  Dockerfile.gpu_dev  Dockerfile_ci  Dockerfile_ci.cpu  LICENSE  NOTICE  README.md  README_cn.md  README_en.md  action.yml  build_centos.sh  build_docker.sh  requirements.txt  test_requirements.txt
3rd/: CMakeLists.txt  eigen.cmake  openblas.cmake
example/cpp/: CMakeLists.txt  README.md  bert_model.cpp  bert_model.h  bert_model_example.cpp  bert_model_test.cpp
fast_transformers/core/: CMakeLists.txt  aligned_scratchpad.cpp  aligned_scratchpad.h  aligned_scratchpad_test.cpp  blas.cpp  blas.h  blas_mkl.cpp  blas_openblas.cpp  blas_test.cpp  cblas_fn.h  common.cpp  common.h  config.cpp  config.h  cuda_allocator.cpp  cuda_allocator.h  cuda_device_context.cpp  cuda_device_context.h  cuda_error.cpp  cuda_error.h  device_context.cpp  device_context.h  device_context_test.cpp  eigen-tensor.cpp  eigen-tensor.h  enforce.cpp  enforce.h  enforce_test.cpp  macros.h  math_function.cpp  math_function.h  memory.cpp  memory.h  nvcommon.cpp  nvcommon.h  profiler.cpp  profiler.h  tensor.cpp  tensor.h  tensor_test.cpp
fast_transformers/layers/: CMakeLists.txt  bert_attention.cpp  bert_attention.h  bert_embedding.cpp  bert_embedding.h  bert_intermediate.cpp  bert_intermediate.h  bert_output.cpp  bert_output.h  bert_self_attention.cpp  bert_self_attention.h  prepare_bert_masks.cpp  prepare_bert_masks.h  prepare_bert_masks_test.cpp  sequence_pool.cpp  sequence_pool.h  transformer.cpp  transformer.h
fast_transformers/layers/kernels/: CMakeLists.txt  activation.cpp  activation.h  activation_test.cpp  gpu_activation.h  gpu_activation_kernel.cu  gpu_activation_kernel.h  gpu_block_reduce.h  gpu_common.h  gpu_embedding_kernel.cu  gpu_embedding_kernel.h  gpu_layer_norm_kernel.cu  gpu_layer_norm_kernel.h  gpu_softmax_kernel.cu  gpu_softmax_kernel.h  gpu_transpose_kernel.cu  gpu_transpose_kernel.h  gpu_utils.cu  gpu_utils.h  ide_macro.h  layer_norm.cpp  layer_norm.h  layer_norm_test.cpp  mat_mul.cpp  mat_mul.h  mat_mul_benchmark.cpp  mat_mul_test.cpp  seq_pool.cpp  seq_pool.h  softmax.cpp  softmax.h  softmax_test.cpp  test_helper.h  transpose.cpp  transpose.h  transpose_test.cpp
fast_transformers/ops/: CMakeLists.txt  bert_embedding_op.h  cpu_bert_embedding_op.cpp  cpu_bert_embedding_op.h  cpu_layernorm_op.cpp  cpu_layernorm_op.h  ops_interfaces.h
fast_transformers/python/: CMakeLists.txt  pybind.cpp  setup.py.in
fast_transformers/python/benchmark/: benchmark.py  run_benchmark.sh
fast_transformers/python/fast_transformers/: __init__.py  config.py  fast_transformers_cxx.pyi  utils.py
fast_transformers/python/tests/: bert_attention_base.py  bert_attention_test.py  bert_embedding_test.py  bert_encoder_test.py  bert_intermediate_test.py  bert_layer_test.py  bert_model_test.py  bert_output_test.py  gpu_bert_attention_test.py  gpu_bert_embedding_test.py  gpu_bert_encoder_test.py  gpu_bert_intermediate_test.py  gpu_bert_layer_test.py  gpu_bert_model_test.py  gpu_bert_output_test.py  gpu_tensor_conversion_test.py  sequence_pool_test.py  tensor_conversion_test.py  utils.py
turbo_transformers/core/: CMakeLists.txt  aligned_scratchpad.cpp  aligned_scratchpad.h  aligned_scratchpad_test.cpp  allocator.cpp  allocator.h  allocator_impl.cpp  allocator_impl.h  allocator_test.cpp  blas.h  blas_blis.cpp  blas_mkl.cpp  blas_openblas.cpp  common.cpp  common.h  config.cpp  config.h  cuda_allocator.cpp  cuda_allocator.h  cuda_allocator_test.cpp  cuda_device_context.cpp  cuda_device_context.h  cuda_enforce.cuh  device_context_test.cpp  eigen-tensor.cpp  eigen-tensor.h  enforce.cpp  enforce.h  enforce_test.cpp  fp16_test.cpp  half.h  macros.h  memory.cpp  memory.h  model_aware_allocator.cpp  model_aware_allocator.h  profiler.cpp  profiler.h  tensor.cpp  tensor.h  (+4 more)
turbo_transformers/core/allocator/: CMakeLists.txt  allocator_api.cpp  allocator_api.h  allocator_api_test.cpp  allocator_impl.cpp  allocator_impl.h  base_allocator.cpp  base_allocator.h  bert_allocator_config.cpp  bert_allocator_config.h  bert_allocator_config_test.cpp  bert_allocator_test.cpp  bert_config.cpp  bert_config.h  chunked_allocator.cpp  chunked_allocator.h  chunked_allocator_test.cpp  model_aware_allocator.cpp  model_aware_allocator.h  model_aware_memory_scheduler.cpp  model_aware_memory_scheduler.h  model_aware_memory_scheduler_test.cpp  naive_allocator.cpp  naive_allocator.h  ordered_list.cpp  ordered_list.h
turbo_transformers/layers/: CMakeLists.txt  README.md  addbias_act.cpp  addbias_act.h  addbias_layernorm.cpp  addbias_layernorm.h  albert_attention.cpp  albert_attention.h  albert_feedforward.cpp  albert_feedforward.h  albert_layer.cpp  albert_layer.h  albert_postprocessor.cpp  albert_postprocessor.h  albert_transformer.cpp  albert_transformer.h  bert_attention.cpp  bert_attention.h  bert_embedding.cpp  bert_embedding.h  bert_intermediate.cpp  bert_intermediate.h  bert_output.cpp  bert_output.h  bert_pooler.cpp  bert_pooler.h  fused_ops.cpp  multi_headed_attention.cpp  multi_headed_attention.h  multi_headed_attention_smart_batch.cpp  multi_headed_attention_smart_batch.h  multi_headed_attention_smart_pad.cpp  multi_headed_attention_smart_pad.h  positionwise_ffn.cpp  positionwise_ffn.h  prepare_bert_masks.cpp  prepare_bert_masks.h  prepare_bert_masks_test.cpp  sequence_pool.cpp  sequence_pool.h  (+1 more)
turbo_transformers/layers/kernels/: CMakeLists.txt  activation.cpp  activation.h  activation_test.cpp  common.cpp  common.h  embedding.cpp  embedding.h  embedding_test.cpp  gpu_activation.h  gpu_activation_kernel.cu  gpu_activation_kernel.h  gpu_block_reduce.cuh  gpu_block_reduce.h  gpu_embedding_kernel.cu  gpu_embedding_kernel.h  gpu_layer_norm_kernel.cu  gpu_layer_norm_kernel.h  gpu_softmax_kernel.cu  gpu_softmax_kernel.h  (+26 more)
turbo_transformers/loaders/: CMakeLists.txt  modeling_bert.cpp  modeling_bert.h  modeling_bert_test.cpp  npz_load.cpp  npz_load.h
turbo_transformers/python/: CMakeLists.txt  pybind.cpp  setup.py.in
(+276 files in other folders)
