include(ExternalProject)
add_library(dlpack INTERFACE)
target_include_directories(dlpack INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/dlpack/include)
add_subdirectory(pybind11)
set(BUILD_TESTING OFF)
add_subdirectory(abseil)
add_subdirectory(Catch2)
add_subdirectory(filesystem)

add_library(loguru loguru/loguru.cpp)
target_include_directories(loguru PUBLIC loguru/)
target_compile_definitions(loguru PUBLIC LOGURU_WITH_STREAMS=1)
